# auto-kms

./: Cargo.toml  README.md  keys.json
.github/workflows/: rust.yml
src/: is_elevated.rs  lib.rs  main.rs
